--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
       <div class="talks__item talks-item hidden">
         <iframe width="220" height="220" src="https://www.youtube.com/embed/DkYUOk33YvM?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       </div>
-      <div class="talks__item talks-item">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/H_1inqYnLws?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <div class="talks__item talks-item hidden">
+        <iframe width="220" height="220" src="https://www.youtube.com/embed/H_1inqYnLws?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       </div>
     </div>
     <div class="section-talks__bottom">
