--- a/index.html
+++ b/index.html
@@ -443,6 +443,11 @@
         <p class="item__title">ULTRAHACK</p>
         <p class="item__desc">HELSINKI</p>
       </div>
+      <div class="hackathons__item">
+        <img alt="HackTrain" src="img/hackathons/hacktrain.png">
+        <p class="item__title">HACKTRAIN</p>
+        <p class="item__desc">LONDON, PARIS, FRANKFURT</p>
+      </div>
     </div>
   </section>
   <section class="section-contact" id="contact">
