Add Varner group

--- a/index.html
+++ b/index.html
@@ -290,6 +290,13 @@
         </p>
         <p class="companies-item__desc">ELIXIR</p>
       </div>
+      <div class="companies__item companies-item hidden">
+        <img alt="logo varner" src="img/companies/varner.png">
+        <p class="companies-item__title">
+          <a href="http://varner.com/en/" target="_blank">VARNER</a>
+        </p>
+        <p class="companies-item__desc">JAVASCRIPT</p>
+      </div>
     </div>
     <div class="section-companies__bottom">
       <a href="#" id="seeAllCompanies" class="button button--big center">SEE ALL</a>
