--- a/index.html
+++ b/index.html
@@ -521,10 +521,6 @@
           <p class="item__desc">(WROCŁAW)</p>
         </div>
         <div class="performances__item">
-          <p class="item__title">Warsaw Ruby User Group</p>
-          <p class="item__desc">(WARSAW)</p>
-        </div>
-        <div class="performances__item">
           <p class="item__title">MeetJS Wrocław</p>
           <p class="item__desc">(WROCŁAW)</p>
         </div>
@@ -624,7 +620,17 @@
         <div class="hackathons__item">
           <img alt="HackTrain" src="img/hackathons/hacktrain.png" />
           <p class="item__title">HACKTRAIN</p>
-          <p class="item__desc">LONDON, PARIS, FRANKFURT</p>
+          <p class="item__desc">LONDON</p>
+        </div>
+        <div class="hackathons__item">
+          <img alt="HackTrain" src="img/hackathons/hacktrain2.png" />
+          <p class="item__title">HACKTRAIN</p>
+          <p class="item__desc">FRANKFURT</p>
+        </div>
+        <div class="hackathons__item">
+          <img alt="HackTrain" src="img/hackathons/hacktrain3.png" />
+          <p class="item__title">HACKTRAIN</p>
+          <p class="item__desc">PARIS</p>
         </div>
       </div>
     </section>
@@ -695,7 +701,7 @@
               <p class="logo__hashtag">#softwareengineer</p>
             </div>
           </a>
-          <p>&copy; 2018 Kamil Lelonek</p>
+          <p>&copy; 2019 Kamil Lelonek</p>
         </div>
         <div class="footer__column footer-contact">
           <div class="footer-contact__title">Contact</div>
